- MF51: Fixed bug #35218 (strtotime no longer ignores timezone comments like (PST)).